--- a/veg.html
+++ b/veg.html
@@ -137,7 +137,7 @@
         <div>About</div>
         <span><input type="text" placeholder="Search for the Item" id="t1" style="height: 30px;"><button>Search</button></span>
         <div><a href="login.html">Login</a></div>
-        <div><a href="signUp.html">SignUp</a></div>
+        <div><a href="index.html">SignUp</a></div>
         <a href="cart.html"><i class="fa-solid fa-cart-plus"></i></a>
     </nav>
     <!-- b n -->
